--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,3 +1,8 @@
+- title: "Solid state physics and algebraic geometry"
+  location: Auburn Algebra Seminar
+  city: Auburn, AL
+  type: Seminar
+  date: 2025-11-18
 - title: "Multigraded Syzygies"
   location: Fields Institute Seminar
   city: Toronto, Canada
