allow for publications to be hid
also, add some in progress publications. These are hid by default from publications.md

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -38,14 +38,26 @@ Nathaniel Gallup:
 Hal Schenck:
   url: "http://webhome.auburn.edu/~hks0015/"
 
-Jane Coons: 
-  url: "https://sites.google.com/view/jane-ivy-coons"
+Paul Breiding:
+  url: "https://pbrdng.github.io"
 
-Ximena Fernandez:
-  url: "https://ximenafernandez.github.io"
+Aviva K. Englander:
+  url: "https://sites.google.com/wisc.edu/avivakenglander/home"
 
-Mike Stillman:
-  url: "https://pi.math.cornell.edu/~mike/"
+Jonathon D. Hauenstein:
+  url: "https://academicweb.nd.edu/~jhauenst/"
 
-Heather A. Harrington:
-  url: "https://people.maths.ox.ac.uk/harrington/"
+Oskar Henriksson: 
+  url: "https://oskarhenriksson.se/"
+
+David K. Johnson:
+  url: https://sites.google.com/view/davidkjohnson
+
+Jordy Lopez Garcia:
+  url: https://jordylopez27.github.io
+
+Deepak Mundayur: 
+  url: "https://sites.google.com/view/deepakmundayur"
+
+Andreas Kretschmer:
+  url: "https://sites.google.com/view/andreas-kretschmer/"
