add links to grants

--- a/_data/grants.yml
+++ b/_data/grants.yml
@@ -1,11 +1,15 @@
 - name: NSF conference grant DMS-2504328 ($20,767)
   years: 2025
   short-description: Awarded to fund MAAG 2025 in Auburn.
+  link: https://www.nsf.gov/awardsearch/showAward?AWD_ID=2504328&HistoricalAwards=false
 - name: NSF Postdoctoral Research Fellowship DMS-2402199 ($190,000)
   years: 2024
+  link: https://www.nsf.gov/awardsearch/showAward?AWD_ID=2402199&HistoricalAwards=false
 - name: NSF conference grant DMS-2408333 ($16,255)
   years: 2024
   short-description: Awarded to fund US participation in the 31st edition of GAeL.
+  link: https://www.nsf.gov/awardsearch/showAward?AWD_ID=2408333&HistoricalAwards=false
 - name: NSF conference grant DMS-2309424 ($15,833)
   years: 2023
-  short-description: Awarded to fund US participation in the 30th edition of GAeL. 
+  short-description: Awarded to fund US participation in the 30th edition of GAeL.
+  link: https://www.nsf.gov/awardsearch/showAward?AWD_ID=2309424&HistoricalAwards=false
