Add Macaulay2 event at Auburn

--- a/_data/organizing.yml
+++ b/_data/organizing.yml
@@ -1,3 +1,9 @@
+- title: Macaulay2 at Auburn
+  type: Conference
+  dates: Fall 2026
+  location: Auburn, AL
+  url: /organizing/M2atAuburn/
+  description: A one week Macaulay2 workshop at Auburn University expand the capabilities and functionality of Macaulay2 and its accompanying packages
 - title: AMS Special Session on Moduli and Syzygies of Algebraic Curves
   shorttitle: Moduli and Syzygies AMS 2026
   type: Special Session
