--- a/_data/grants.yml
+++ b/_data/grants.yml
@@ -2,14 +2,18 @@
   years: 2025
   short-description: Awarded to fund MAAG 2025 in Auburn.
   link: https://www.nsf.gov/awardsearch/showAward?AWD_ID=2504328&HistoricalAwards=false
+  highlight: true
 - name: NSF Postdoctoral Research Fellowship DMS-2402199 ($190,000)
   years: 2024
   link: https://www.nsf.gov/awardsearch/showAward?AWD_ID=2402199&HistoricalAwards=false
+  highlight: true
 - name: NSF conference grant DMS-2408333 ($16,255)
   years: 2024
   short-description: Awarded to fund US participation in the 31st edition of GAeL.
   link: https://www.nsf.gov/awardsearch/showAward?AWD_ID=2408333&HistoricalAwards=false
+  highlight: true
 - name: NSF conference grant DMS-2309424 ($15,833)
   years: 2023
   short-description: Awarded to fund US participation in the 30th edition of GAeL.
   link: https://www.nsf.gov/awardsearch/showAward?AWD_ID=2309424&HistoricalAwards=false
+  highlight: true
