add oaxaca talk

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -3,6 +3,11 @@
   city: Auburn, AL
   type: Seminar
   date: 2025-11-18
+- title: "Solid state physics and algebraic geometry"
+  location: Instituto de Matemáticas de la UNAM CAT Seminar
+  city: Oaxaca, Mexico
+  type: Seminar
+  date: 2025-11-18
 - title: "Algebraic Geometry and its Applications"
   location: Auburn First Year Seminar
   city: Auburn, AL
