add boston talk

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,4 +1,9 @@
 - title: "Solid state physics and algebraic geometry"
+  location: AMS Special Session on Recent Advances in Commutative Algebra and Algebraic Geometry
+  city: Boston, MA
+  type: Conference
+  date: 2026-03-28
+- title: "Solid state physics and algebraic geometry"
   location: Auburn Algebra Seminar
   city: Auburn, AL
   type: Seminar
@@ -22,7 +27,7 @@
   date: 2025-05-13
   highlight: true
 - title: "Multigraded regularity of curves"
-  location: AMS Spring Southeastern Sectional Meeting
+  location: AMS Special Session on Recent Trends in Applied Algebra and Geometry
   city: Clemson, SC
   type: Conference
   date: 2025-03-08
