add M2 workshop, SE asia dates

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,18 +1,23 @@
-- title: "Solid state physics and algebraic geometry"
+- title: "Solid State Physics and Algebraic Geometry"
   location: AMS Special Session on Recent Advances in Commutative Algebra and Algebraic Geometry
   city: Boston, MA
   type: Conference
   date: 2026-03-28
-- title: "Solid state physics and algebraic geometry"
-  location: Auburn Algebra Seminar
-  city: Auburn, AL
+- title: "Solid State Physics and Algebraic Geometry"
+  location: Chiang Mai University
+  city: Chiang Mai, Thailand
   type: Seminar
-  date: 2025-10-28
-- title: "Solid state physics and algebraic geometry"
+  date: 2025-12-16
+- title: "Solid State Physics and Algebraic Geometry"
   location: Instituto de Matemáticas de la UNAM CAT Seminar
   city: Oaxaca, Mexico
   type: Seminar
   date: 2025-10-30
+- title: "Solid State Physics and Algebraic Geometry"
+  location: Auburn Algebra Seminar
+  city: Auburn, AL
+  type: Seminar
+  date: 2025-10-28
 - title: "Algebraic Geometry and its Applications"
   location: Auburn First Year Seminar
   city: Auburn, AL
