--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -1,3 +1,9 @@
+- title: Macaulay2 Workshop
+  venue: Auburn University
+  where: Auburn, AL
+  type: Conference
+  start: 2026-09-14
+  end: 2026-09-18
 - title: Regularity in algebra, combinatorics, and geometry
   venue: BIRS
   where: Banff, Canada
@@ -8,6 +14,19 @@
   where: Boston, MA
   start: 2026-03-28
   end: 2026-03-29
+- title: Macaulay2 Winter School
+  where: Hue, Vietnam
+  start: 2025-12-29
+  end: 2026-01-09
+- title: Chulalongkorn University
+  where: Bangkok, Thailand
+  start: 2025-12-23
+  end: 2025-12-25
+- title: Seminar
+  venue: Chiang Mai University
+  where: Chiang Mai, Thailand
+  start: 2025-12-16
+  end: 2025-12-20
 - title: CAT Seminar 
   venue: Instituto de Matemáticas de la UNAM
   where: Oaxaca, Mexico
