--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -4,7 +4,7 @@
   type: Conference
   date: 2026-03-28
 - title: "Solid State Physics and Algebraic Geometry"
-  location: Chiang Mai University
+  location: Chiang Mai University Colloquium
   city: Chiang Mai, Thailand
   type: Seminar
   date: 2025-12-16
