--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -22,7 +22,7 @@
   where: Bangkok, Thailand
   start: 2025-12-23
   end: 2025-12-25
-- title: Seminar
+- title: Colloquium
   venue: Chiang Mai University
   where: Chiang Mai, Thailand
   start: 2025-12-16
