add C@I and urls

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -3,6 +3,7 @@
   city: Boston, MA
   type: Conference
   date: 2026-03-28
+  url: https://webhome.auburn.edu/~mkb0096/Fall2025Seminar.html
 - title: "Solid State Physics and Algebraic Geometry"
   location: Chiang Mai University Colloquium
   city: Chiang Mai, Thailand
@@ -13,6 +14,7 @@
   city: Oaxaca, Mexico
   type: Seminar
   date: 2025-10-30
+  url: https://oaxaca.matem.unam.mx/actividades/eventodetalle/630/-/solid-state-physics-and-algebraic-geometry
 - title: "Solid State Physics and Algebraic Geometry"
   location: Auburn Algebra Seminar
   city: Auburn, AL
