--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -14,6 +14,11 @@
   where: Boston, MA
   start: 2026-03-28
   end: 2026-03-29
+- title: Collaborate@ICERM
+  venue: ICERM
+  where: Providence, RI
+  start: 2026-01-26
+  end: 2026-01-30
 - title: Macaulay2 Winter School
   where: Hue, Vietnam
   start: 2025-12-29
