fix oaxaca on map

--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -34,7 +34,7 @@
   end: 2025-12-20
 - title: CAT Seminar 
   venue: Instituto de Matemáticas de la UNAM
-  where: Oaxaca, Mexico
+  where: Oaxaca de Juárez, Mexico
   start: 2025-10-30
   end: 2025-11-04
 - title: Homological Mirror Symmetry Workshop
