--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -10,8 +10,8 @@
   type: Seminar
   date: 2025-12-16
 - title: "Solid State Physics and Algebraic Geometry"
-  location: Instituto de Matemáticas de la UNAM CAT Seminar
-  city: Oaxaca, Mexico
+  location: Instituto de Matemáticas de la UNAM GATO Seminar
+  city: Oaxaca de Juárez, Mexico
   type: Seminar
   date: 2025-10-30
   url: https://oaxaca.matem.unam.mx/actividades/eventodetalle/630/-/solid-state-physics-and-algebraic-geometry
