--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -32,7 +32,7 @@
   where: Chiang Mai, Thailand
   start: 2025-12-16
   end: 2025-12-20
-- title: CAT Seminar 
+- title: GATO Seminar 
   venue: Instituto de Matemáticas de la UNAM
   where: Oaxaca de Juárez, Mexico
   start: 2025-10-30
