--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -4,6 +4,11 @@
   type: Conference
   start: 2026-09-14
   end: 2026-09-18
+- title: Future of Macaulay2
+  venue: Georgia Tech
+  where: Atlanta, GA
+  start: 2026-05-13
+  end: 2026-05-21
 - title: Collaborate@ICERM
   venue: ICERM
   where: Providence, RI
